--- a/src/make/Contact.css
+++ b/src/make/Contact.css
@@ -171,4 +171,43 @@ span h5 {
     height: 45vh;
     width: 25vw;
 }
-@media(max-width:1024px) {}
+@media(max-width:1024px) {
+
+    .form button {
+    margin-top: 25px;
+    margin-left: 120px;
+    background: rgba(252, 222, 63, 1);
+    color: #fff;
+    padding: 12px 18px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 600;
+    transition: all 0.3s ease;
+}
+    .form {
+    background-color: rgba(255, 247, 211, 1);
+    border-radius: 15px;
+    height: 70vh;
+    width: 33vw;
+    padding: 25px;
+    padding-top: 10px;
+    box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
+}
+.intel {
+    height: 20vh;
+    display: flex;
+    margin-top: 30px;
+    flex-direction: column;
+    justify-content: space-around;
+    border-radius: 20px;
+    width: auto;
+    padding-top: 10px;
+    background-color: rgba(255, 247, 211, 1);
+}
+
+}
+@media(max-width:770px){
+
+}
