--- a/src/make/Termandcondition.css
+++ b/src/make/Termandcondition.css
@@ -3,6 +3,7 @@
     width: 100vw;
     height: auto;
     caret-color: transparent;
+
 }
 
 .term-head {
@@ -11,11 +12,13 @@
     font-weight: bold;
     padding-top: 20px;
 }
+
 .tmg {
     height: 300px;
     width: auto;
     margin-left: 40px;
 }
+
 .header-1 {
     margin-left: 20vw;
     margin-top: 60px;
@@ -27,12 +30,14 @@
 .term-head2 {
     display: flex;
 }
+
 .tmg2 {
     height: 250px;
     width: auto;
     margin-left: 130px;
     margin-top: 40px;
 }
+
 .span-1 {
     height: 30vh;
     border-radius: 10px;
@@ -45,6 +50,7 @@
     margin-left: 25vh;
     background-color: rgba(255, 251, 233, 1);
 }
+
 .header-2 {
     font-size: 30px;
     margin-bottom: 10px;
@@ -52,6 +58,7 @@
     text-align: end;
     padding-right: 20px;
 }
+
 .para-1 {
     margin-top: 0;
     font-size: 18px;
@@ -63,6 +70,7 @@
 .term-second {
     display: flex;
 }
+
 .text {
     margin-top: 60px;
     height: 30vh;
@@ -72,6 +80,7 @@
     margin-left: 50px;
     background-color: rgba(255, 251, 233, 1);
 }
+
 .text1 {
     margin-top: 60px;
     height: 30vh;
@@ -81,6 +90,7 @@
     margin-left: 50px;
     background-color: rgba(255, 251, 233, 1);
 }
+
 .header-3 {
     font-size: 30px;
     color: rgba(33, 65, 90, 1);
@@ -88,12 +98,13 @@
 }
 
 .para-2 {
-    margin-top: 0;    
+    margin-top: 0;
 
     text-align: justify;
     font-size: 20px;
     color: rgba(33, 65, 90, 1);
 }
+
 .tmg3 {
     margin-left: 30vh;
     height: 350px;
@@ -108,6 +119,7 @@
     margin-top: 40px;
     margin-right: 20vh;
 }
+
 .span-2 {
     height: 30vh;
     border-radius: 10px;
@@ -120,6 +132,7 @@
     margin-left: 25vh;
     background-color: rgba(255, 251, 233, 1);
 }
+
 .header-4 {
     padding-top: 10px;
     font-size: 30px;
@@ -128,8 +141,9 @@
     text-align: end;
     padding-right: 20px;
 }
+
 .para-3 {
-    margin-top: 0;    
+    margin-top: 0;
     text-align: justify;
     font-size: 20px;
     color: rgba(33, 65, 90, 1);
@@ -142,14 +156,16 @@
     margin-left: 370px;
     margin-top: 40px;
 }
+
 .header-5 {
     margin-top: 10px;
     font-size: 30px;
     color: rgba(33, 65, 90, 1);
     padding-left: 20px;
 }
+
 .para-4 {
-    margin-top: 0;    
+    margin-top: 0;
     text-align: justify;
     font-size: 20px;
     color: rgba(33, 65, 90, 1);
@@ -164,6 +180,7 @@
     margin-right: 20vh;
     padding-bottom: 100px;
 }
+
 .span-3 {
     height: 30vh;
     border-radius: 10px;
@@ -176,6 +193,7 @@
     margin-left: 25vh;
     background-color: rgba(255, 251, 233, 1);
 }
+
 .header-6 {
     padding-top: 10px;
     font-size: 30px;
@@ -184,339 +202,511 @@
     text-align: end;
     padding-right: 20px;
 }
+
 .para-5 {
-    margin-top: 0;    
+    margin-top: 0;
     text-align: justify;
     font-size: 20px;
     color: rgba(33, 65, 90, 1);
 }
-@media(max-width:1024px){
-.tmg {
-    height: 250px;
-    width: auto;
-    margin-left: 40px;
+
+@media(max-width:1024px) {
+    .tmg {
+        height: 250px;
+        width: auto;
+        margin-left: 40px;
+    }
+
+    .header-1 {
+        margin-left: 10vw;
+        margin-top: 40px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        color: rgba(33, 65, 90, 1);
+        font-size: 60px;
+    }
+
+    .tmg2 {
+        height: 200px;
+        width: auto;
+        margin-left: 90px;
+        margin-top: 40px;
+    }
+
+    .span-1 {
+        height: auto;
+        border-radius: 10px;
+        font-size: 20px;
+        width: 40vw;
+        padding: 10px;
+        color: rgba(33, 65, 90, 1);
+        text-align: center;
+        margin-top: 40px;
+        margin-left: 15vh;
+        background-color: rgba(255, 251, 233, 1);
+    }
+
+    .tmg3 {
+        margin-left: 10vh;
+        height: 300px;
+        width: 500px;
+        margin-top: 40px;
+    }
+
+    .text {
+        margin-top: 60px;
+        height: auto;
+        width: 40vw;
+        border-radius: 10px;
+        margin-left: 50px;
+        background-color: rgba(255, 251, 233, 1);
+    }
+
+    .tmg4 {
+        height: 200px;
+        width: auto;
+        margin-left: 110px;
+        margin-top: 60px;
+        margin-right: 20vh;
+    }
+
+    .span-2 {
+        height: auto;
+        border-radius: 10px;
+        font-size: 20px;
+        width: 40vw;
+        padding: 10px;
+        color: rgba(33, 65, 90, 1);
+        text-align: center;
+        margin-top: 40px;
+        margin-left: 15vh;
+        background-color: rgba(255, 251, 233, 1);
+    }
+
+    .tmg5 {
+        height: 250px;
+        width: 280px;
+        margin-left: 180px;
+        margin-top: 70px;
+    }
+
+    .tmg6 {
+        height: 250px;
+        width: auto;
+        margin-left: 120px;
+        margin-top: 40px;
+        margin-right: 5vh;
+        padding-bottom: 100px;
+    }
+
+    .span-3 {
+        height: 35vh;
+        border-radius: 10px;
+        font-size: 20px;
+        width: 40vw;
+        padding: 10px;
+        color: rgba(33, 65, 90, 1);
+        text-align: center;
+        margin-top: 40px;
+        margin-left: 25vh;
+        background-color: rgba(255, 251, 233, 1);
+    }
 }
-.header-1 {
-    margin-left: 10vw;
-    margin-top: 40px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: rgba(33, 65, 90, 1);
-    font-size: 60px;
-}
-.tmg2 {
-    height: 200px;
-    width: auto;
-    margin-left: 90px;
-    margin-top: 40px;
-}
-.span-1 {
-    height: auto;
-    border-radius: 10px;
-    font-size: 20px;
-    width: 40vw;
-    padding: 10px;
-    color: rgba(33, 65, 90, 1);
-    text-align: center;
-    margin-top: 40px;
-    margin-left: 15vh;
-    background-color: rgba(255, 251, 233, 1);
-}
-.tmg3 {
-    margin-left: 10vh;
-    height: 300px;
-    width: 500px;
-    margin-top: 40px;
-}
-.text {
-    margin-top: 60px;
-    height: auto;
-    width: 40vw;
-    border-radius: 10px;
-    margin-left: 50px;
-    background-color: rgba(255, 251, 233, 1);
-}
-.tmg4 {
-    height: 200px;
-    width: auto;
-    margin-left: 110px;
-    margin-top: 60px;
-    margin-right: 20vh;
-}
-.span-2 {
-    height: auto;
-    border-radius: 10px;
-    font-size: 20px;
-    width: 40vw;
-    padding: 10px;
-    color: rgba(33, 65, 90, 1);
-    text-align: center;
-    margin-top: 40px;
-    margin-left: 15vh;
-    background-color: rgba(255, 251, 233, 1);
-}
-.tmg5 {
-    height: 250px;
-    width: 280px;
-    margin-left: 180px;
-    margin-top: 70px;
-}
-.tmg6 {
-    height: 250px;
-    width: auto;
-    margin-left: 120px;
-    margin-top: 40px;
-    margin-right: 5vh;
-    padding-bottom: 100px;
-}
-.span-3 {
-    height: 35vh;
-    border-radius: 10px;
-    font-size: 20px;
-    width: 40vw;
-    padding: 10px;
-    color: rgba(33, 65, 90, 1);
-    text-align: center;
-    margin-top: 40px;
-    margin-left: 25vh;
-    background-color: rgba(255, 251, 233, 1);
-}
-}
-@media(max-width:768px){
+
+@media(max-width:768px) {
     .term {
-    background-color: rgba(186, 242, 255, 1);
-    width: 100vw;
-    height: 100%;
-    caret-color: transparent;
-}
-.tmg {
-    height: 200px;
-    width: auto;
-    margin-left: 40px;
-}
-.header-1 {
-    margin-left: 10vw;
-    margin-top: 40px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: rgba(33, 65, 90, 1);
-    font-size: 40px;
-}
-.text1 {
-    margin-top: 60px;
-    height: auto;
-    width: 40vw;
-    padding: 20px;
-    border-radius: 10px;
-    margin-left: 50px;
-    background-color: rgba(255, 251, 233, 1);
-}
-.tmg2 {
-    height: 200px;
-    width: auto;
-    margin-left: 1px;
-    margin-top: 40px;
-}
-.span-1 {
-    height: auto;
-    border-radius: 10px;
-    font-size: 20px;
-    width: 40vw;
-    padding: 10px;
-    color: rgba(33, 65, 90, 1);
-    text-align: center;
-    margin-top: 40px;
-    margin-left: 5vh;
-    background-color: rgba(255, 251, 233, 1);
-}
-.tmg3 {
-    margin-left: 6vh;
-    height: 300px;
-    width: 340px;
-    margin-top: 40px;
-}
-.text {
-    margin-top: 60px;
-    height: auto;
-    width: 40vw;
-    border-radius: 10px;
-    margin-left: 50px;
-    background-color: rgba(255, 251, 233, 1);
-}
-.tmg4 {
-    height: 200px;
-    width: 180px;
-    margin-left: 60px;
-    margin-top: 60px;
-    margin-right: 7vh;
-}
-.span-2 {
-    height: auto;
-    border-radius: 10px;
-    font-size: 20px;
-    width: 45vw;
-    padding: 10px;
-    color: rgba(33, 65, 90, 1);
-    text-align: center;
-    margin-top: 40px;
-    margin-left: 15vh;
-    background-color: rgba(255, 251, 233, 1);
-}
-.tmg5 {
-    height: 200px;
-    width: 200px;
-    margin-left: 100px;
-    margin-top: 140px;
-}
-.tmg6 {
-    height: 200px;
-    width: 200px;
-    margin-left: 80px;
-    margin-top: 40px;
-    margin-right: 5vh;
-}
-.span-3 {
-    height: auto;
-    border-radius: 10px;
-    font-size: 20px;
-    width: 40vw;
-    margin-bottom: 40px;
-    padding: 10px;
-    color: rgba(33, 65, 90, 1);
-    text-align: center;
-    margin-top: 40px;
-    margin-left: 12vh;
-    background-color: rgba(255, 251, 233, 1);
+        background-color: rgba(186, 242, 255, 1);
+        width: 100vw;
+        height: 100%;
+        caret-color: transparent;
+    }
+
+    .tmg {
+        height: 200px;
+        width: auto;
+        margin-left: 40px;
+    }
+
+    .header-1 {
+        margin-left: 10vw;
+        margin-top: 40px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        color: rgba(33, 65, 90, 1);
+        font-size: 40px;
+    }
+
+    .text1 {
+        margin-top: 60px;
+        height: auto;
+        width: 40vw;
+        padding: 20px;
+        border-radius: 10px;
+        margin-left: 50px;
+        background-color: rgba(255, 251, 233, 1);
+    }
+
+    .tmg2 {
+        height: 200px;
+        width: auto;
+        margin-left: 1px;
+        margin-top: 40px;
+    }
+
+    .span-1 {
+        height: auto;
+        border-radius: 10px;
+        font-size: 20px;
+        width: 40vw;
+        padding: 10px;
+        color: rgba(33, 65, 90, 1);
+        text-align: center;
+        margin-top: 40px;
+        margin-left: 5vh;
+        background-color: rgba(255, 251, 233, 1);
+    }
+
+    .tmg3 {
+        margin-left: 6vh;
+        height: 300px;
+        width: 340px;
+        margin-top: 40px;
+    }
+
+    .text {
+        margin-top: 60px;
+        height: auto;
+        width: 40vw;
+        border-radius: 10px;
+        margin-left: 50px;
+        background-color: rgba(255, 251, 233, 1);
+    }
+
+    .tmg4 {
+        height: 200px;
+        width: 180px;
+        margin-left: 60px;
+        margin-top: 60px;
+        margin-right: 7vh;
+    }
+
+    .span-2 {
+        height: auto;
+        border-radius: 10px;
+        font-size: 20px;
+        width: 45vw;
+        padding: 10px;
+        color: rgba(33, 65, 90, 1);
+        text-align: center;
+        margin-top: 40px;
+        margin-left: 15vh;
+        background-color: rgba(255, 251, 233, 1);
+    }
+
+    .tmg5 {
+        height: 200px;
+        width: 200px;
+        margin-left: 100px;
+        margin-top: 140px;
+    }
+
+    .tmg6 {
+        height: 200px;
+        width: 200px;
+        margin-left: 80px;
+        margin-top: 40px;
+        margin-right: 5vh;
+    }
+
+    .span-3 {
+        height: auto;
+        border-radius: 10px;
+        font-size: 20px;
+        width: 40vw;
+        margin-bottom: 40px;
+        padding: 10px;
+        color: rgba(33, 65, 90, 1);
+        text-align: center;
+        margin-top: 40px;
+        margin-left: 12vh;
+        background-color: rgba(255, 251, 233, 1);
+    }
+
+    .header-2,
+    .header-3,
+    .header-4,
+    .header-5,
+    .header-6 {
+        font-size: 25px;
+    }
+
 }
 
-.header-2,
-.header-3,
-.header-4,
-.header-5,
-.header-6 {
-    font-size: 25px;
+@media(max-width:426px) {
+    .tmg {
+        height: 150px;
+        width: auto;
+        margin-left: 0px;
+    }
+
+    .header-1 {
+        margin-left: 0vw;
+        margin-top: 40px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        color: rgba(33, 65, 90, 1);
+        font-size: 30px;
+    }
+
+    .tmg2 {
+        height: 120px;
+        width: auto;
+        margin-left: 1px;
+        margin-top: 40px;
+    }
+
+    .span-1 {
+        height: auto;
+        border-radius: 10px;
+        font-size: 20px;
+        width: 40vw;
+        padding: 10px;
+        color: rgba(33, 65, 90, 1);
+        text-align: center;
+        margin-top: 40px;
+        margin-left: 1vh;
+        background-color: rgba(255, 251, 233, 1);
+    }
+
+    .tmg3 {
+        margin-left: 1vh;
+        height: 120px;
+        width: auto;
+        margin-top: 40px;
+    }
+
+    .text {
+        margin-top: 40px;
+        height: auto;
+        width: 50vw;
+        border-radius: 10px;
+        margin-left: 20px;
+        background-color: rgba(255, 251, 233, 1);
+    }
+
+    .text1 {
+        margin-top: 40px;
+        height: auto;
+        width: 55vw;
+        border-radius: 10px;
+        padding: 10px;
+        margin-left: 20px;
+        background-color: rgba(255, 251, 233, 1);
+    }
+
+    .header-3 {
+        margin-top: 0%;
+        color: rgba(33, 65, 90, 1);
+        padding-left: 0%;
+    }
+
+    .para-1,
+    .para-2,
+    .para-3,
+    .para-4,
+    .para-5 {
+        font-size: 12px;
+    }
+
+    .tmg4 {
+        height: 120px;
+        width: auto;
+        margin-left: 15px;
+        margin-top: 60px;
+        margin-right: 7vh;
+    }
+
+    .span-2 {
+        height: auto;
+        border-radius: 10px;
+        font-size: 10px;
+        width: 45vw;
+        padding: 10px;
+        color: rgba(33, 65, 90, 1);
+        text-align: center;
+        margin-top: 40px;
+        margin-left: 1vh;
+        background-color: rgba(255, 251, 233, 1);
+    }
+
+    .tmg5 {
+        height: 120px;
+        width: auto;
+        margin-left: 10px;
+        margin-top: 50px;
+    }
+
+    .header-5 {
+        margin-top: 0%;
+        padding-left: 0%;
+    }
+
+    .tmg6 {
+        height: 120px;
+        width: auto;
+        margin-left: 15px;
+        margin-top: 40px;
+        margin-right: 0vh;
+    }
+
+    .span-3 {
+        height: auto;
+        border-radius: 10px;
+        font-size: 20px;
+        width: 40vw;
+        margin-bottom: 40px;
+        padding: 10px;
+        color: rgba(33, 65, 90, 1);
+        text-align: center;
+        margin-top: 40px;
+        margin-left: 10vh;
+        background-color: rgba(255, 251, 233, 1);
+    }
+
+    .header-6 {
+        padding-right: 0%;
+    }
+
+    .header-2,
+    .header-3,
+    .header-4,
+    .header-5,
+    .header-6 {
+        font-size: 15px;
+    }
+}
+/* ---------------- 375px ---------------- */
+@media(max-width:380px) {
+    .tmg {
+        height: 130px;
+        width: auto;
+        margin-left: 0;
+    }
+
+    .header-1 {
+        margin-left: 0;
+        font-size: 26px;
+        margin-top: 30px;
+    }
+
+    .tmg2 {
+        height: 110px;
+        width: auto;
+        margin-left: 0;
+        margin-top: 30px;
+    }
+
+    .span-1,
+    .span-2,
+    .span-3 {
+        width: 70vw;
+        font-size: 12px;
+        margin-left: 5vw;
+        padding: 8px;
+    }
+
+    .tmg3,
+    .tmg4,
+    .tmg5,
+    .tmg6 {
+        height: 110px;
+        width: auto;
+        margin-left: 10px;
+        margin-top: 30px;
+    }
+
+    .text,
+    .text1 {
+        width: 65vw;
+        padding: 8px;
+        margin-left: 15px;
+    }
+
+    .header-2,
+    .header-3,
+    .header-4,
+    .header-5,
+    .header-6 {
+        font-size: 13px;
+    }
+
+    .para-1,
+    .para-2,
+    .para-3,
+    .para-4,
+    .para-5 {
+        font-size: 11px;
+    }
 }
 
-}
-@media(max-width:426px){
-.tmg {
-    height: 150px;
-    width: auto;
-    margin-left: 0px;
-}
-.header-1 {
-    margin-left: 0vw;
-    margin-top: 40px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: rgba(33, 65, 90, 1);
-    font-size: 30px;
-}
-.tmg2 {
-    height: 120px;
-    width: auto;
-    margin-left: 1px;
-    margin-top: 40px;
-}
-.span-1 {
-    height: auto;
-    border-radius: 10px;
-    font-size: 20px;
-    width: 40vw;
-    padding: 10px;
-    color: rgba(33, 65, 90, 1);
-    text-align: center;
-    margin-top: 40px;
-    margin-left: 1vh;
-    background-color: rgba(255, 251, 233, 1);
-}
-.tmg3 {
-    margin-left: 1vh;
-    height: 120px;
-    width: auto;
-    margin-top: 40px;
-}
-.text {
-    margin-top: 40px;
-    height: auto;
-    width: 50vw;
-    border-radius: 10px;
-    margin-left: 20px;
-    background-color: rgba(255, 251, 233, 1);
-}
-.text1{
-    margin-top: 40px;
-    height: auto;
-    width: 55vw;
-    border-radius: 10px;
-    padding: 10px;
-    margin-left: 20px;
-    background-color: rgba(255, 251, 233, 1);
-}
-.header-3 {
-    margin-top: 0%;
-    color: rgba(33, 65, 90, 1);
-    padding-left: 0%;
-}
-.para-1,.para-2,.para-3,.para-4,.para-5{
-    font-size: 12px;
-}
 
-.tmg4 {
-    height: 120px;
-    width: auto;
-    margin-left: 15px;
-    margin-top: 60px;
-    margin-right: 7vh;
-}
-.span-2 {
-    height: auto;
-    border-radius: 10px;
-    font-size: 10px;
-    width: 45vw;
-    padding: 10px;
-    color: rgba(33, 65, 90, 1);
-    text-align: center;
-    margin-top: 40px;
-    margin-left: 1vh;
-    background-color: rgba(255, 251, 233, 1);
-}
-.tmg5 {
-    height: 120px;
-    width: auto;
-    margin-left: 10px;
-    margin-top: 50px;
-}
-.header-5{
-    margin-top: 0%;
-    padding-left: 0%;
-}
-.tmg6 {
-    height: 120px;
-    width: auto;
-    margin-left: 15px;
-    margin-top: 40px;
-    margin-right: 0vh;
-}
-.span-3 {
-    height: auto;
-    border-radius: 10px;
-    font-size: 20px;
-    width: 40vw;
-    margin-bottom: 40px;
-    padding: 10px;
-    color: rgba(33, 65, 90, 1);
-    text-align: center;
-    margin-top: 40px;
-    margin-left: vh;
-    background-color: rgba(255, 251, 233, 1);
-}
-.header-6{
-    padding-right: 0%;
-}
-.header-2,
-.header-3,
-.header-4,
-.header-5,
-.header-6 {
-    font-size: 15px;
-}
-}
+/* ---------------- 320px ---------------- */
+@media(max-width:320px) {
+    .tmg {
+        height: 110px;
+        width: auto;
+        margin-left: 0;
+    }
 
+    .header-1 {
+        margin-left: 0;
+        font-size: 22px;
+        margin-top: 25px;
+    }
+
+    .tmg2 {
+        height: 90px;
+        width: auto;
+        margin-left: 0;
+        margin-top: 25px;
+    }
+
+    .span-1,
+    .span-2,
+    .span-3 {
+        width: 80vw;
+        font-size: 11px;
+        margin-left: 5vw;
+        padding: 6px;
+    }
+
+    .tmg3,
+    .tmg4,
+    .tmg5,
+    .tmg6 {
+        height: 90px;
+        width: auto;
+        margin-left: 5px;
+        margin-top: 25px;
+    }
+
+    .text,
+    .text1 {
+        width: 75vw;
+        padding: 6px;
+        margin-left: 10px;
+    }
+
+    .header-2,
+    .header-3,
+    .header-4,
+    .header-5,
+    .header-6 {
+        font-size: 12px;
+    }
+
+    .para-1,
+    .para-2,
+    .para-3,
+    .para-4,
+    .para-5 {
+        font-size: 10px;
+    }
+}
