--- a/src/make/bear.css
+++ b/src/make/bear.css
@@ -1,8 +1,9 @@
 .Bear {
-  height: 153vh;
+  height: auto;
   width: 100vw;
   background-color: white;
   caret-color: transparent;
+  padding-bottom: 30px;
 }
 
 .nav {
@@ -194,22 +195,25 @@
     border-bottom-right-radius: 60px;
     border-top-left-radius: 90px;
   }
-.text-box h1 {
-  font-size: 36px;
-  font-weight: bold;
-  color: #000;
-  text-align: center;
-  margin: 0;
-  line-height: 1.4;
-}
-.cone {
-  z-index: 0;
-  height: 40vh;
-  position: absolute;
-  margin-left: 100px;
-  margin-top: 10px;
-  width: 20vw;
-}
+
+  .text-box h1 {
+    font-size: 36px;
+    font-weight: bold;
+    color: #000;
+    text-align: center;
+    margin: 0;
+    line-height: 1.4;
+  }
+
+  .cone {
+    z-index: 0;
+    height: 40vh;
+    position: absolute;
+    margin-left: 100px;
+    margin-top: 10px;
+    width: 20vw;
+  }
+
   .ber img {
     max-width: 30vw;
     max-height: 60vh;
@@ -217,197 +221,327 @@
     z-index: 1;
     margin-left: -170px;
   }
+
   .bttn button {
-  height: 6vh;
-  width: 250px;
-  font-size: 21PX;
-  margin-left: 40vw;
-  border: none;
-  border-radius: 20px;
-  font-weight: 600;
-  caret-color: transparent;
-  cursor: pointer;
-  margin-top: 50px;
-  background-color: rgba(252, 223, 64, 1);
-}
-.next {
-  height: 5vh;
-  width: 10vw;
-  margin-left:38vh;
-  margin-top: 50px;
-  display: flex;
-  justify-content: space-around;
-  cursor: pointer;
+    height: 6vh;
+    width: 250px;
+    font-size: 21PX;
+    margin-left: 40vw;
+    border: none;
+    border-radius: 20px;
+    font-weight: 600;
+    caret-color: transparent;
+    cursor: pointer;
+    margin-top: 50px;
+    background-color: rgba(252, 223, 64, 1);
+  }
 
-}
-.lock p {
-  font-size: 16px;
-  text-align: center;
-  max-width: 200px;
-  margin: 0 auto;
-  cursor: pointer;
-}
-}
-@media(max-width:768px){
-.lock1 {
-  height: 150px;
-  width: 150px;
-  background-color: silver;
-  border-radius: 100%;
-  margin-top: 10px;
-  margin-left: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-
-  >img {
-    border-radius: 100%;
-    height: 100%;
-    width: 100%;
+  .next {
+    height: 5vh;
+    width: 10vw;
+    margin-left: 38vh;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    cursor: pointer;
 
   }
-}
-.main {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-around;
-}
-.lock p {
-  font-size: 14px;
-  text-align: center;
-  max-width: 200px;
-  margin:  15px;
-  cursor: pointer;
-}
-.text-box {
-  background: #FFD600;
-  padding: 70px 50px;
-  transform: skew(-30deg);
-  display: flex;
-  height: 17vh;
-  margin-left: 30px;
-  width: 95vw;
-  margin-top: 90px;
-  flex-direction: column;
-  justify-content: center;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 60px;
-  border-top-left-radius: 90px;
+
+  .lock p {
+    font-size: 16px;
+    text-align: center;
+    max-width: 200px;
+    margin: 0 auto;
+    cursor: pointer;
+  }
 }
 
-.ber img {
+@media(max-width:768px) {
+  .lock1 {
+    height: 150px;
+    width: 150px;
+    background-color: silver;
+    border-radius: 100%;
+    margin-top: 10px;
+    margin-left: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
+    >img {
+      border-radius: 100%;
+      height: 100%;
+      width: 100%;
+
+    }
+  }
+
+  .main {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+  }
+
+  .lock p {
+    font-size: 14px;
+    text-align: center;
+    max-width: 200px;
+    margin: 15px;
+    cursor: pointer;
+  }
+
+  .text-box {
+    background: #FFD600;
+    padding: 70px 50px;
+    transform: skew(-30deg);
+    display: flex;
+    height: 17vh;
+    margin-left: 30px;
+    width: 95vw;
+    margin-top: 90px;
+    flex-direction: column;
+    justify-content: center;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 60px;
+    border-top-left-radius: 90px;
+  }
+
+  .ber img {
     max-width: 35vw;
     max-height: 60vh;
     margin-top: 70px;
     z-index: 1;
     margin-left: -130px;
   }
-.next {
-  height: 5vh;
-  width: 10vw;
-  margin-left:20vh;
-  margin-top: 50px;
-  display: flex;
-  justify-content: space-around;
-  cursor: pointer;
 
-}
-}
-@media(max-width:429px){
-.lock1 {
-  height: 150px;
-  width: 150px;
-  background-color: silver;
-  border-radius: 100%;
-  margin-top: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
+  .next {
+    height: 5vh;
+    width: 10vw;
+    margin-left: 20vh;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    cursor: pointer;
 
-  >img {
+  }
+}
+
+@media(max-width:429px) {
+ 
+  .lock1 {
+    height: 200px;
+    width: 200px;
+    background-color: silver;
     border-radius: 100%;
-    height: 100%;
-    width: 100%;
+    margin-top: 10px;
+    margin-left: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 
+    >img {
+      border-radius: 100%;
+      height: 200px;
+      width: 200px;
+
+    }
   }
-}
-.ber img {
+
+  .cone {
+    z-index: 0;
+    height: 30vh;
+    position: absolute;
+    margin-left: 80px;
+    margin-top: 130px;
+    width: 20vw;
+  }
+
+  .ber {
     width: auto;
-    height: 50vh;
-    margin-top: 100px;
-    z-index: 1;
-    margin-left: -130px;
+    height: 90vh;
+    display: flex;
   }
+
+  .ber img {
+    width: auto;
+    height: 35vh;
+    margin-top: 250px;
+    margin-right: 35px;
+    z-index: 1;
+  }
+
   .text-box h1 {
-  font-size: 20px;
-  font-weight: bold;
-  color: #000;
-  text-align: start;
-  margin-left: -29px;
-  line-height: 1.4;
-}
-.text-box small {
-  font-size: 14px;
-  font-weight: 600;
-  margin-top: 12px;
-  margin-left: -29px;
-  color: #333;
+    font-size: 20px;
+    font-weight: bold;
+    color: #000;
+    text-align: start;
+    margin-left: -29px;
+    line-height: 1.4;
+  }
+
+  .text-box small {
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 12px;
+    margin-left: -29px;
+    color: #333;
+  }
+
+  .text-box {
+    background: #FFD600;
+    padding: 70px 50px;
+    transform: skew(-30deg);
+    display: flex;
+    height: 7vh;
+    margin-left: 30px;
+    width: 50vw;
+    margin-top: 90px;
+    flex-direction: column;
+    justify-content: center;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 60px;
+    border-top-left-radius: 90px;
+  }
+
+  .main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .next {
+    height: 5vh;
+    width: 10vw;
+    margin-left: 6vh;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    cursor: pointer;
+    padding-bottom: 30px;
+
+  }
+
+  .bttn button {
+    height: 6vh;
+    width: auto;
+    font-size: 18PX;
+    margin-left: 22vw;
+    border: none;
+    border-radius: 20px;
+    font-weight: 600;
+    caret-color: transparent;
+    cursor: pointer;
+    margin-top: 50px;
+    background-color: rgba(252, 223, 64, 1);
+  }
+
+  .llo {
+    height: 4vh;
+    width: 10vw;
+    border-radius: 100%;
+    text-align: center;
+    caret-color: transparent;
+    display: flex;
+    gap: 20px;
+  }
 }
 
-.text-box {
-  background: #FFD600;
-  padding: 70px 50px;
-  transform: skew(-30deg);
-  display: flex;
-  height: 7vh;
-  margin-left: 30px;
-  width: 95vw;
-  margin-top: 90px;
-  flex-direction: column;
-  justify-content: center;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 60px;
-  border-top-left-radius: 90px;
-}
-.main {
-  display: flex;
-  flex-wrap:  wrap;
-  justify-content: space-around;
-}
-.next {
-  height: 5vh;
-  width: 10vw;
-  margin-left:10vh;
-  margin-top: 50px;
-  display: flex;
-  justify-content: space-around;
-  cursor: pointer;
-  padding-bottom: 30px;
+@media(max-width:380px) {
+  .bttn button {
+    height: 6vh;
+    width: auto;
+    font-size: 15PX;
+    margin-left: 22vw;
+    border: none;
+    border-radius: 20px;
+    font-weight: 600;
+    caret-color: transparent;
+    cursor: pointer;
+    margin-top: 50px;
+    background-color: rgba(252, 223, 64, 1);
+  }
 
+  .ber img {
+    width: auto;
+    height: 30vh;
+    margin-top: 280px;
+    margin-right: 5px;
+    z-index: 1;
+  }
 }
-.bttn button {
-  height: 6vh;
-  width: auto;
-  font-size: 18PX;
-  margin-left: 22vw;
-  border: none;
-  border-radius: 20px;
-  font-weight: 600;
-  caret-color: transparent;
-  cursor: pointer;
-  margin-top: 50px;
-  background-color: rgba(252, 223, 64, 1);
-}
-.llo {
-  height: 4vh;
-  width: 10vw;
-  border-radius: 100%;
-  text-align: center;
-  caret-color: transparent;
-  display: flex;
-  gap: 20px;
-}
+
+@media(max-width:322px) {
+  .ber img {
+    width: auto;
+    height: 25vh;
+    margin-top: 310px;
+    margin-right: -0px;
+    z-index: 1;
+  }
+
+  .bttn button {
+    height: 5vh;
+    width: auto;
+    font-size: 13PX;
+    margin-left: 20vw;
+    border: none;
+    border-radius: 20px;
+    font-weight: 600;
+    caret-color: transparent;
+    cursor: pointer;
+    margin-top: 50px;
+    background-color: rgba(252, 223, 64, 1);
+  }
+
+  .lock1 {
+    height: 200px;
+    width: 200px;
+    background-color: silver;
+    border-radius: 100%;
+    margin-top: 10px;
+    margin-left: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
+    >img {
+      border-radius: 100%;
+      height: 200px;
+      width: 200px;
+
+    }
+  }
+
+  .text-box h1 {
+    font-size: 17px;
+    font-weight: bold;
+    color: #000;
+    text-align: start;
+    margin-left: -29px;
+    line-height: 1.4;
+  }
+
+  .text-box small {
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 12px;
+    margin-left: -29px;
+    color: #333;
+  }
+
+  .next {
+    height: 5vh;
+    width: 10vw;
+    margin-left: 2vh;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    cursor: pointer;
+    padding-bottom: 30px;
+
+  }
 
 }
