--- a/src/make/class.css
+++ b/src/make/class.css
@@ -91,8 +91,8 @@
 
     .pop {
         height: 20vh;
-        width: 30vw;
-        margin: 40px;
+        width: 35vw;
+        margin: 20px;
         filter: drop-shadow(5px 5px 10px black);
         font-size: 25px;
         display: flex;
@@ -105,11 +105,11 @@
     }
 }
 
-@media(max-width:320px) {
+@media(max-width:380px) {
     .pop {
         height: 20vh;
-        width: 34vw;
-        margin: 20px;
+        width: 40vw;
+        margin: 10px;
         filter: drop-shadow(5px 5px 10px black);
         font-size: 20px;
         display: flex;
@@ -118,6 +118,20 @@
         align-items: center;
         background-color: #FFD19D;
         border-radius: 100%;
-
+    }
+}
+@media(max-width:321px){
+.pop {
+        height: 15vh;
+        width: 35vw;
+        margin: 10px;
+        filter: drop-shadow(5px 5px 10px black);
+        font-size: 20px;
+        display: flex;
+        font-weight: 700;
+        justify-content: center;
+        align-items: center;
+        background-color: #FFD19D;
+        border-radius: 100%;
     }
 }
