--- a/src/make/error.css
+++ b/src/make/error.css
@@ -44,5 +44,140 @@
     background-color: rgb(192, 164, 25);
 }
 
+@media(max-width:1025px){
+    .error {
+    height: 90vh;
+    width: 100vw;
+    background-color: rgba(186, 242, 255, 1);
+    margin-bottom: 0%;
+}
+    .erro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    >img{
+        height: 60vh;
+        
+    }
+}
+.error button {
+    height: 7vh;
+    margin-left: 50vh;
+    font-size: 20px;
+}
+}
+@media(max-width:769px){
+    .error {
+    height: 100%;
+    padding-bottom: 40px;
+    width: 100vw;
+    background-color: rgba(186, 242, 255, 1);
+    margin-bottom: 0%;
+}
+    .erro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    >img{
+        height: 49vh;
+        
+    }
+}
+.error h1 {
+    margin-top: 10px;
+    text-align: center;
+    color: #20586E;
+    font-size: 40px;
+}
+.error button {
+    margin-top: 20px;
+    height: 7vh;
+    width: auto;
+    margin-left: 35vh;
+    font-size: 20px;
+}}
+@media(max-width:426px){
+    .error {
+    height: 70vh;
+    width: 100vw;
+    background-color: rgba(186, 242, 255, 1);
+    margin-bottom: 0%;
+}
+    .erro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    >img{
+        height: 27vh;
+        margin-top: 30px;
+        
+    }
+}
+.error button {
+    height: 5vh;
+    width: auto;
+    margin-left: 15vh;
+    font-size: 17px;
+}}
 
+@media(max-width:376px){
+    .error {
+    height: 70vh;
+    width: 100vw;
+    background-color: rgba(186, 242, 255, 1);
+    margin-bottom: 0%;
+}
+    .erro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    >img{
+        height: 24vh;
+        margin-top: 30px;
+        
+    }
+}
+.error button {
+    height: 5vh;
+    width: auto;
+    margin-left: 12vh;
+    font-size: 17px;
+}}
+@media(max-width:321px){
+    .error {
+    height: 70vh;
+    width: 100vw;
+    background-color: rgba(186, 242, 255, 1);
+    margin-bottom: 0%;
+}
+    .erro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    >img{
+        height: 20vh;
+        margin-top: 30px;
+        
+    }
+}
 
+.error button {
+    height: 5vh;
+    width: auto;
+    margin-left: 9vh;
+    font-size: 15px;
+}
+.error h1 {
+    margin-top: 0%;
+    text-align: center;
+    color: #20586E;
+    font-size: 35px;
+}
+
+.error p {
+    text-align: center;
+    font-size: 25px;
+    color: #20586E;
+    font-weight: 700;
+}
+}
