--- a/src/make/thankyou.css
+++ b/src/make/thankyou.css
@@ -2,7 +2,8 @@
     background-color: rgba(186, 242, 255, 1);
     width: 100vw;
     height: auto;
-    margin-bottom: 0%;
+    caret-color: transparent;
+    padding-bottom: 40px;
 }
 
 
@@ -14,13 +15,14 @@
     font-weight: 700;
     margin-top: -20px;
     margin-bottom: 0%;
-    
+
 }
-.bttnpe{
+
+.bttnpe {
     margin-left: 45%;
     margin-top: 20px;
     height: 5vh;
-    width: 13vw;
+    width: auto;
     border: none;
     color: rgba(26, 58, 84, 1);
     font-weight: 700;
@@ -28,7 +30,8 @@
     font-size: 25px;
     background-color: rgba(252, 222, 63, 1);
 }
-.bttnpe:hover{
+
+.bttnpe:hover {
     background-color: rgba(255, 196, 0, 1);
     color: black;
     cursor: pointer;
@@ -64,7 +67,6 @@
 
 .recipe {
     padding-top: 50px;
-    height: 60vh;
     width: 100vw;
     background-color: rgba(186, 242, 255, 1);
 
@@ -86,6 +88,12 @@
 }
 
 
+.item-img00 {
+    height: 200px;
+    width: 200px;
+    border-radius: 15px;
+    margin-top: 20px;
+}
 
 .order-card {
     background-color: rgba(255, 251, 233, 1);
@@ -98,7 +106,7 @@
     margin-bottom: 15px;
 }
 
-.prices {
+.pricess {
     margin-left: 35vh;
     font-weight: 600;
     font-size: 20px;
@@ -121,17 +129,17 @@
     flex-direction: column;
 }
 
-.buye-btn {
+.buyno-btn {
     margin-top: 10px;
     height: 5vh;
-    width: 7vw;
+    width: auto;
     border: none;
     border-radius: 10px;
     font-size: 17px;
     background-color: skyblue;
 }
 
-.buye-btn:hover {
+.buyno-btn:hover {
     background-color: rgb(11, 148, 202);
     color: white;
 }
@@ -146,6 +154,222 @@
     margin-top: 10px;
     font-size: 20px;
 }
-.Thankyou button{
-    
+
+@media(max-width:769px) {
+    .btns {
+        margin-left: 55vh;
+        display: flex;
+        margin-top: -9vw;
+        flex-direction: column;
+    }
+
+    .thake {
+        height: 300px;
+        width: 750px;
+
+        margin-top: -70px;
+    }
+
+    .bttnpe {
+        margin-left: 40vw;
+        margin-top: 20px;
+        height: 5vh;
+        width: auto;
+        border: none;
+        color: rgba(26, 58, 84, 1);
+        font-weight: 700;
+        border-radius: 10px;
+        font-size: 25px;
+        background-color: rgba(252, 222, 63, 1);
+    }
+}
+
+@media (max-width: 426px) {
+    .Thankyou {}
+
+    .Thankyou h2 {
+        font-size: 28px;
+        margin-top: 8px;
+    }
+
+    .Thankyou p {
+        font-size: 22px;
+        margin-top: 6px;
+    }
+
+    .img-container {
+        padding: 0 8px;
+    }
+
+    .thake {
+        width: 100%;
+        max-width: 420px;
+        height: auto;
+        margin-top: 0;
+    }
+
+    .thake1 {
+        width: 100%;
+
+        height: 300px;
+        margin-top: 16px;
+    }
+
+    .bttnpe {
+        display: block;
+        margin: 18px auto 0;
+        font-size: 20px;
+        padding: 6px 18px;
+    }
+
+    .btns {
+        margin-left: 0;
+        margin-top: 12px;
+        flex-direction: row;
+        gap: 30px;
+        justify-content: center;
+    }
+
+    .order-info h4,
+    .order-info h5 {
+        margin-left: 20px;
+        margin-top: 20px;
+        font-size: 20px;
+    }
+
+    .pricess,
+    .qty {
+        margin-left: 20px;
+    }
+
+    .item-img00 {
+        width: 250px;
+        margin-left: 20px;
+        height: 200px;
+        margin-top: 12px;
+    }
+
+    .buyno-btn {
+        margin-top: 0px;
+        height: 6vh;
+        width: auto;
+        border: none;
+        border-radius: 10px;
+        font-size: 17px;
+        background-color: skyblue;
+    }
+}
+
+@media (max-width: 376px) {
+    .Thankyou h2 {
+        font-size: 26px;
+    }
+
+    .Thankyou p {
+        font-size: 20px;
+    }
+
+    .thake {
+        max-width: 360px;
+    }
+
+    .thake1 {
+        max-width: 320px;
+    }
+
+    .bttnpe {
+        font-size: 18px;
+        padding: 6px 14px;
+    }
+
+    .btns {
+        gap: 8px;
+    }
+
+    .item-img00 {
+        width: 190px;
+        height: 180px;
+    }
+
+    .order-info h4,
+    .order-info h5 {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 321px) {
+    .Thankyou h2 {
+        font-size: 22px;
+        margin-top: 6px;
+    }
+
+    .Thankyou p {
+        font-size: 18px;
+        margin-top: 4px;
+    }
+
+    .thake {
+        max-width: 300px;
+        height: auto;
+        margin-top: 0;
+    }
+
+    .thake1 {
+        max-width: 270px;
+        height: 240px;
+        margin-top: 12px;
+    }
+
+    .bttnpe {
+        display: block;
+        margin: 14px auto 0;
+        font-size: 16px;
+        padding: 6px 12px;
+    }
+
+    .item-img00 {
+        width: 170px;
+        height: 160px;
+        margin-left: 15px;
+        margin-top: 10px;
+    }
+
+    .order-info h4,
+    .order-info h5 {
+        margin-left: 15px;
+        font-size: 19px;
+        margin-top: 15px;
+    }
+
+    .pricess,
+    .qty {
+        margin-left: 15px;
+        font-size: 19px;
+    }
+
+    .order-card {
+        background-color: rgba(255, 251, 233, 1);
+
+        height: auto;
+        width: auto;
+    }
+
+    .btns {
+        margin-left: 0;
+        margin-top: 10px;
+        flex-direction: row;
+        gap: 10px;
+        justify-content: center;
+    }
+
+    .buyno-btn {
+        height: 5.5vh;
+        font-size: 15px;
+        padding: 4px 10px;
+    }
+
+    .order-info header {
+        margin-top: 10px;
+        font-size: 18px;
+    }
 }
