--- a/src/make/bear.css
+++ b/src/make/bear.css
@@ -545,3 +545,124 @@
   }
 
 }
+
+@media(max-width: 400px) {
+
+  .text-box {
+    background: #FFD600;
+    padding: 60px 45px;
+    transform: skew(-30deg);
+    display: flex;
+    height: 8vh;
+    margin-left: 25px;
+    width: 55vw;
+    margin-top: 85px;
+    flex-direction: column;
+    justify-content: center;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 50px;
+    border-top-left-radius: 70px;
+  }
+
+  .text-box h1 {
+    font-size: 18px;
+    font-weight: bold;
+    color: #000;
+    text-align: start;
+    margin-left: -25px;
+    line-height: 1.4;
+  }
+
+  .text-box small {
+    font-size: 13px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-left: -25px;
+    color: #333;
+  }
+
+  .ber img {
+    width: auto;
+    height: 32vh;
+    margin-top: 260px;
+    margin-right: 15px;
+    z-index: 1;
+  }
+
+  .cone {
+    z-index: 0;
+    height: 32vh;
+    position: absolute;
+    margin-left: 70px;
+    margin-top: 120px;
+    width: 22vw;
+  }
+
+  .bttn button {
+    height: 5.5vh;
+    width: auto;
+    font-size: 16px;
+    margin-left: 25vw;
+    border: none;
+    border-radius: 18px;
+    font-weight: 600;
+    caret-color: transparent;
+    cursor: pointer;
+    margin-top: 45px;
+    background-color: rgba(252, 223, 64, 1);
+  }
+
+  .lock1 {
+    height: 180px;
+    width: 180px;
+    background-color: silver;
+    border-radius: 100%;
+    margin-top: 10px;
+    margin-left: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
+    >img {
+      border-radius: 100%;
+      height: 180px;
+      width: 180px;
+    }
+  }
+
+  .lock p {
+    font-size: 13px;
+    text-align: center;
+    max-width: 180px;
+    margin: 0 auto;
+    cursor: pointer;
+  }
+
+  .main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .next {
+    height: 5vh;
+    width: 10vw;
+    margin-left: 5vh;
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-around;
+    cursor: pointer;
+    padding-bottom: 25px;
+  }
+
+  .llo {
+    height: 4vh;
+    width: 10vw;
+    border-radius: 100%;
+    text-align: center;
+    caret-color: transparent;
+    display: flex;
+    gap: 15px;
+  }
+}
